--- a/page36.html
+++ b/page36.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader6 mbr-parallax-background mbr-after-navbar" id="extHeader6-ca" data-rv-view="46" style="background-image: url(assets/images/picture1-1012x659.png);">
+<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader6 mbr-parallax-background mbr-after-navbar" id="extHeader6-ca" data-rv-view="46" style="background-image: url(assets/images/picture1-1012x659.png);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(255, 255, 255);">
 
@@ -137,7 +137,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘And then there were none’ by Agatha Christie</h3>
@@ -162,7 +162,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘Sophie’s world’ by Jostein Gaarder</h3>
@@ -187,7 +187,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The Light between Oceans’ by M.L. Stedman</h3>
@@ -212,7 +212,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘Cartes Postales from Greece’ by Victoria Hislop</h3>
@@ -238,7 +238,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘Eat Pray Love’ by Elizabeth Gilbert</h3>
@@ -263,7 +263,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The Art of Hearing Heartbeats’ by Jan-Philipp Sendkerr</h3>
@@ -288,7 +288,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The Nightingale’ by Kristin Hannah</h3>
@@ -314,7 +314,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘Beautiful Broken Things’ by Sara Barnard</h3>
@@ -339,7 +339,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘All the Bright Places’ by Jennifer Niven</h3>
@@ -364,7 +364,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘Gone With the Wind’ by Margaret Mitchell</h3>
@@ -389,7 +389,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The Kite Runner’ by Khaled Hosseini</h3>
@@ -414,7 +414,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The Beautiful and Damned’ by F. Scott Fitzgerald</h3>
@@ -439,7 +439,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘Before I Fall’ by Lauren Oliver</h3>
@@ -464,7 +464,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/19286609-314x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/51zvj2ygail.-sx345-bo1204203200-347x499.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The Paris Winter’ by Imogen Robertson</h3>
@@ -489,7 +489,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/the-worlds-wife-cover-310x475.jpg"></div>
+                        <div class="mbr-figure image-size" style="width: 20%; font-size: 50px;"><img src="assets/images/81tqgmsrxel.-sy445-314x445.jpg"></div>
                         <div class="mbr-table-cell col-md-6 text-xs-center text-md-left">
 
                             <h3 class="mbr-section-title display-2">‘The World’s Wife’ by Carol Ann Duffy</h3>
